backend/infra/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
spec:
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database-container
          image: postgres:17.4
          ports:
            - containerPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  selector:
    app: database
  ports:
    - port: 5432
      targetPort: 5432
  type: LoadBalancer
