backend/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-auth-service

spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8888

  ingressClassName: nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-queue-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /queue(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: queue-service
                port:
                  number: 8080

  ingressClassName: nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-story-service

spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /stories
            pathType: Prefix
            backend:
              service:
                name: story-service
                port:
                  number: 8888

  ingressClassName: nginx
